fix navMenu overflow issue

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -68,6 +68,7 @@ nav {
     flex-basis: 100%;
     transition: height .2s;
     height: 0;
+    overflow: hidden;
 }
 
 nav ul {
